--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,12 @@
-{{#each users as |user| }}
+{{#each posts as |post| }}
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
+    <h2>{{post.title}}</h2>
+    <span>Posted by {{post.user.username}} on {{post.updatedAt}}</span>
   </div>
   <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
+    <p>{{post.content}}</p>
   </div>
+  {{!-- attach a partial for comments --}}
 </div>
 {{/each}}
