--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,11 +16,11 @@
         <nav>
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            {{#if logged_in}}
+            {{!-- {{#if logged_in}}
             <a href="/login">Login</a>
             {{else}}
             <a href="/logout">LogOut</a>
-            {{/if}}
+            {{/if}} --}}
         </nav>
     </header>
     <main class="container container-fluid mt-5">
