--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Talking Tech</title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
 </head>
 
@@ -16,11 +16,11 @@
         <nav>
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            {{!-- {{#if logged_in}}
-            <a href="/login">Login</a>
+            {{#if logged_in}}
+            <a href="/logout">Log Out</a>
             {{else}}
-            <a href="/logout">LogOut</a>
-            {{/if}} --}}
+            <a href="/login">Log In</a>
+            {{/if}}
         </nav>
     </header>
     <main class="container container-fluid mt-5">
