connect login js to handlebars, hide password, and format dates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
             {{#if logged_in}}
-            <a href="/logout">Log Out</a>
+            <button id="logOut">Log Out</button>
             {{else}}
             <a href="/login">Log In</a>
             {{/if}}
