--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,22 @@
 <section class="logInSection">
-<form id="loginForm">
-    <h3>Login</h3>
-    <label for="username">Username</label>
-    <input id='username' type="text">
-    <label for="password">Password</label>
-    <input id='password' type="text">
-    <button id='logIn' type="submit">Log In</button>
-</form>
-<form id="registerForm">
-    <h3>Register</h3>
-    <label for="regUsername">Username</label>
-    <input id='regUsername' type="text">
-    <label for="regPassword">Password</label>
-    <input id='regPassword' type="text">
-    <label for="regRePassword">Re-Type Password</label>
-    <input id='regRePassword' type="text">
-    <button id='register' type="submit">Register</button>
-</form>
+    <form id="loginForm">
+        <h3>Login</h3>
+        <label for="username">Username</label>
+        <input id='username' type="text">
+        <label for="password">Password</label>
+        <input id='password' type="password">
+        <button type="submit">Log In</button>
+    </form>
+    <form id="registerForm">
+        <h3>Register</h3>
+        <label for="regUsername">Username</label>
+        <input id='regUsername' type="text">
+        <label for="regPassword">Password</label>
+        <input id='regPassword' type="password">
+        <label for="regRePassword">Re-Type Password</label>
+        <input id='regRePassword' type="password">
+        <button type="submit">Register</button>
+    </form>
 </section>
 
 <script src="/js/login.js"></script>
