--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
 {{#each posts as |post| }}
-<div class="row align-center mb-5">
+<div class="row align-center mb-5 postBox">
   <div class="col-md-6">
     <h2>{{post.title}}</h2>
-    <span>Posted by {{post.user.username}} on {{post.updatedAt}}</span>
+    <span>Posted by {{post.user.username}} on {{format_date post.updatedAt}}</span>
   </div>
   <div class="col-md-6">
     <p>{{post.content}}</p>
@@ -11,7 +11,7 @@
   {{#each post.comments as |comment|}}
   <div>
     <p>{{comment.comment}}</p>
-    <p>{{comment.user.username}}<span>{{comment.updatedAt}}</span></p>
+    <p>{{comment.user.username}}<span>{{format_date comment.updatedAt}}</span></p>
   </div>
   {{/each}}
 </div>
