--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,7 @@
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
+     {{!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> --}}
 </body>
 
 </html>
