--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Talking Tech</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 
 </head>
@@ -33,7 +36,8 @@
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
-     {{!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> --}}
+    {{!--
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> --}}
 </body>
 
 </html>
