--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
             {{#if logged_in}}
-            <button id="logOut">Log Out</button>
+            <a href="/" id="logOut">Log Out</a>
             {{else}}
             <a href="/login">Log In</a>
             {{/if}}
