--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,45 +1,47 @@
 {{!-- create new options modal --}}
 <div class="card hidden">
     <form class="card-body" data-type="add">
-        <h5 class="card-title">Add or Update Post</h5>
+        <h3 class="card-title">Add or Update Post</h3>
         <div>
-            <h2>Title:</h2>
-            <input class='changeTitle' type="text">
+            <h5>Title:</h5>
+            <input class='inputBox changeTitle' type="text">
         </div>
         <div>
             <p>Content:</p>
-            <input class='changeContent' type="text">
+            <input class='inputBox changeContent' type="text">
         </div>
         <button type="button" class="cancelBtn">Cancel</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" >Submit</button>
     </form>
 </div>
-<button class="addBtn">Add Post</button>
+<div class="addBtnSection">
+    <button class="addBtn">Add Post</button>
+</div>
 <div class="postsSection">
     {{#each posts as |post| }}
     {{!-- //post box must encompass the hidden comments section --}}
-    <div class="row align-center mb-5 postBox">
+    <div class="postBox">
         <div>
-            <div class="col-md-6">
+            <div class="titleStyle col-12">
                 <h2 class='title' data-postid="{{post.id}}">{{post.title}}</h2>
                 <span>Posted by {{post.user.username}} on {{format_date post.updatedAt}}</span>
             </div>
-            <div class="col-md-6">
+            <div class="contentStyle col-12">
                 <p class='content' data-postid="{{post.id}}">{{post.content}}</p>
             </div>
         </div>
 
 
         {{!-- hidden options section --}}
-        <div class="optionsbox hidden">
+        <div class="optionsbox hidden col-12">
             <button class='updateBtn' data-postid="{{post.id}}">Update</button>
             <button class='deleteBtn' data-postid="{{post.id}}">Delete</button>
         </div>
 
         {{#each post.comments as |comment|}}
-        <div>
-            <p>{{comment.comment}}</p>
-            <p>{{comment.user.username}}<span>{{format_date comment.updatedAt}}</span></p>
+        <div class='commentStyle col-12'>
+            <p class="commentText">{{comment.comment}}</p>
+            <p class="commentDate">{{comment.user.username}}<span>{{format_date comment.updatedAt}}</span></p>
         </div>
         {{/each}}
     </div>
