--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,6 @@
 <section class="logInSection">
+    <button class="loginToggle">LogIn</button>
+    <button class="registerToggle">Register</button>
     <form id="loginForm">
         <h3>Login</h3>
         <label for="username">Username</label>
