--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,11 @@
-/* * {
-    border: 1px solid red;
-} */
+* {
+    color: white;
+}
 
-/* hidden functionality */
+body {
+    background: linear-gradient(#000000d8,#000000d8) ;
+}
+
 .hidden {
     display: none;
 }
@@ -12,7 +15,8 @@ p {
 }
 
 header {
-    background-color: cadetblue;
+    background: linear-gradient(#333333,#000000);
+    border-bottom: 2px solid #00FFFF;
     padding-bottom: 10px;
 }
 
@@ -25,14 +29,35 @@ header nav * {
     margin: 15px;
 }
 
+button {
+    background-color: #000000;
+    color: white;
+    border: 2px solid #00FFFF;
+    border-radius: 5px;
+}
+
+#registerForm {
+    display: none;
+}
+#registerForm input {
+    color: black
+}
+
+#loginForm input {
+    color: black
+}
+
 .postBox {
     margin-bottom: 30px;
+    border: 2px solid #00FFFF;
+    border-radius: 5px;
 }
 
 .titleStyle {
-    border: rgb(137, 137, 137) 2px solid;
-    background-color: lightgray;
+    /* border: rgb(137, 137, 137) 2px solid; */
+    /* background-color: lightgray; */
     padding: 5px 15px;
+    /* border-bottom: solid 2px white ; */
 }
 
 .titleStyle span {
@@ -40,9 +65,12 @@ header nav * {
 }
 
 .contentStyle {
-    border: rgb(137, 137, 137) 2px solid;
+    border-top: solid 2px white ;
+    border-bottom: solid 2px white ;
+    /* border: rgb(137, 137, 137) 2px solid; */
     padding: 5px 15px;
-    background-color: rgb(238, 238, 238);
+    text-align: center;
+    /* background-color: rgb(238, 238, 238); */
 }
 
 .contentStyle p {
@@ -67,9 +95,6 @@ header nav * {
     width: 100%;
 }
 
-button {
-    border: 2px lightgrey solid;
-}
 
 .commentboxStyle {
     display: flex;
@@ -98,4 +123,12 @@ h5 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.card {
+    background-color: #000000;
+}
+
+input {
+    color: #000000;
 }
