--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,16 +3,16 @@
 <div class="postBox">
   <div>
     <div class="titleStyle col-12">
-      <h2>{{post.title}}</h2>
+      <h6>{{post.title}}</h6>
       <span>Posted by {{post.user.username}} on {{format_date post.updatedAt}}</span>
     </div>
     <div class="contentStyle col-12">
-      <p>{{post.content}}</p>
+      <h2 class='content' data-postid="{{post.id}}">{{post.content}}</h2>
     </div>
   </div>
 
   {{!-- hidden comment section --}}
-  <form class="commentbox hidden col-12" >
+  <form class="commentbox hidden col-12">
     <input class='inputBox' type="text" placeholder="comment">
     <button class='addComment' data-postid="{{post.id}}" type="submit">Comment</button>
   </form>
@@ -30,4 +30,3 @@
 {{#if logged_in}}
 <script src="/js/homepage.js"></script>
 {{/if}}
-
